--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ after_success:
   - git config --global user.name "l2m2"
   - git config --global user.email "l2m2lq@gmail.com"
   - cd ./public
+  - cp ../stone/* .
   - git init
   - git add .
   - git commit -m "Update blog content by Travis CI"
