--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
 branches:
   only:
     - master
+before_install:
+  - git clone https://github.com/tufu9441/maupassant-hexo.git themes/maupassant
 install:
   - npm install
 script:
