--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -83,12 +83,8 @@ widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts
   - links
 
 links:
-  - title: site-name0
-    url: http://www.example1.com/
-  - title: site-name2
-    url: http://www.example2.com/
-  - title: site-name3
-    url: http://www.example3.com/
+  - title: 无名的旅人
+    url: https://jrdeng.github.io/
 
 timeline:
   - num: 1
