--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -1,14 +1,14 @@
-disqus: l2m2 ## Your disqus_shortname, e.g. username
+disqus: ## Your disqus_shortname, e.g. username
 uyan: ## Your uyan_id. e.g. 1234567
 livere: ## Your livere data-uid, e.g. MTAyMC8zMDAxOC78NTgz
 changyan: ## Your changyan appid, e.g. cyrALsXc8
 changyan_conf: ## Your changyan conf, e.g. prod_d8a508c2825ab57eeb43e7c69bba0e8b
 gitment:
-  enable: false ## If you want to use Gitment comment system please set the value to true.
-  owner: ## Your GitHub ID, e.g. username
-  repo: ## The repository to store your comments, make sure you're the repo's owner, e.g. imsun.github.io
-  client_id: ## GitHub client ID, e.g. 75752dafe7907a897619
-  client_secret: ## GitHub client secret, e.g. ec2fb9054972c891289640354993b662f4cccc50
+  enable: true ## If you want to use Gitment comment system please set the value to true.
+  owner: l2m2 ## Your GitHub ID, e.g. username
+  repo: l2m2.github.io ## The repository to store your comments, make sure you're the repo's owner, e.g. imsun.github.io
+  client_id: 063f09497ab2295cd574 ## GitHub client ID, e.g. 75752dafe7907a897619
+  client_secret: 511f140355c2df260b5b0f85f1e8decdf4eeb1a3 ## GitHub client secret, e.g. ec2fb9054972c891289640354993b662f4cccc50
 gitalk:
   enable: false ## If you want to use Gitment comment system please set the value to true.
   owner:  ## Your GitHub ID, e.g. username
