--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -15,7 +15,7 @@ gitalk:
   repo: l2m2.github.io ## The repository to store your comments, make sure you're the repo's owner, e.g. gitalk.github.io
   client_id: 063f09497ab2295cd574 ## GitHub client ID, e.g. 75752dafe7907a897619
   client_secret: 511f140355c2df260b5b0f85f1e8decdf4eeb1a3 ## GitHub client secret, e.g. ec2fb9054972c891289640354993b662f4cccc50
-  admin: l2m2 ## Github repo owner and collaborators, only these guys can initialize github issues.
+  admin: ['l2m2'] ## Github repo owner and collaborators, only these guys can initialize github issues.
 valine: ## https://valine.js.org
   enable: false ## If you want to use Valine comment system, please set the value to true.
   appid: ## Your LeanCloud application App ID, e.g. pRBBL2JR4N7kLEGojrF0MsSs-gzGzoHsz
