--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-helper-qrcode": "^1.0.2",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-pug": "0.0.5",
