--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://l2m2.top
+url: https://l2m2.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -83,6 +83,9 @@ feed:
 type: atom
 path: atom.xml
 limit: 20
+
+sitemap:
+  path: sitemap.xml
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
