--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,13 @@ type: atom
 path: atom.xml
 limit: 20
 
+# SEO
 sitemap:
   path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
+
+baidu_site_verification: 037Vj8O0kz
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
