--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 sudo: false
 language: node_js
-node_js: stable
+node_js: 
+  - 10
 cache:
   directories:
     - node_modules
 branches:
   only:
     - master
-# install:
-#   - npm install
+install:
+  - npm install
 script:
   - hexo generate
 after_success:
