--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -83,7 +83,7 @@ widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts
 
 links:
   - title: 无名的旅人
-    url: https://jrdeng.github.io/
+    url: https://wuming.me/
 
 timeline:
   - num: 1
